--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-bootstrap-navbar": "^1.1.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.0.17",
+    "sass": "^1.33.0",
     "simple-react-bootstrap": "^0.2.7"
   },
   "scripts": {
@@ -19,6 +20,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }, 
+  },
   "homepage": "https://diznicolasamor.github.io/tienda-de-pianos/"
 }
