--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bootstrap": "^3.3.7",
+    "lodash": "^4.17.21",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.0",
     "react-bootstrap-navbar": "^1.1.0",
